--- a/hotels.html
+++ b/hotels.html
@@ -43,7 +43,7 @@
         <h2 class="visually-hidden">Форма поиска гостиницы</h2>
         <form class="form-inner">
           <!-- Группа чекбоксов Инфраструктура -->
-          <fieldset class="form-inner__form-group">
+          <fieldset class="form-inner__form-group form-inner__form-group--infrastructure">
             <legend class="form-inner__form-title">
               Инфраструктура:
             </legend>
@@ -67,8 +67,8 @@
           </fieldset>
 
           <!-- Группа чекбоксов Тип жилья -->
-          <fieldset class="form-inner__form-group">
-            <legend class="form-inner__form-title">
+          <fieldset class="form-inner__form-group form-inner__form-group--type-housing">
+            <legend class="form-inner__form-title ">
               Тип жилья:
             </legend>
             <ul class="form-inner__list" role="none">
@@ -91,24 +91,24 @@
           </fieldset>
 
           <!-- Выбор из диапазона -->
-          <fieldset class="form-inner__form-group">
+          <fieldset class="form-inner__form-group form-inner__form-group--cost-day">
             <legend class="form-inner__form-title">
               Стоимость в сутки (Р):
             </legend>
 
             <div class="form-inner__price-fields">
               <label class="form-inner__label">От
-                <input class="form-inner__input form-inner__input--text" type="text" name="price-min" value="0"
-                  placeholder="От 0">
+                <input class="form-inner__input form-inner__input--text" type="text" name="price-min" value="0">
               </label>
               <label class="form-inner__label">До
-                <input class="form-inner__input form-inner__input--text" type="text" name="price-max" value="3 000"
-                  placeholder="До 3000">
+                <input class="form-inner__input form-inner__input--text" type="text" name="price-max" value="3000">
               </label>
             </div>
             <div class="form-inner__range">
-              <div class="form-inner__range-bar"></div>
-              <div class="form-inner__range-bar form-inner__range-bar--fill"></div>
+              <div class="form-inner__range-bar">
+                <div class="form-inner__range-bar form-inner__range-bar--fill"></div>
+              </div>
+
               <button class="form-inner__range-grip form-inner__range-grip--min" type="button">
                 <span class="visually-hidden">Минимальное значение цены</span>
               </button>
@@ -148,7 +148,6 @@
             <a class="sorting__direction-link sorting__direction-link--down sorting__direction-link--current"
               href="#">
               <span class="visually-hidden">По убыванию</span>
-
             </a>
           </li>
         </ul>
