--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2 class="visually-hidden">Преимущества</h2>
         <p class="features__title">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <ul class="features__list">
-          <li class="features__item features-item item-image">
+          <li class="features__item features__item--image-right features-item item-image">
             <div class="features__wrapper">
               <h3 class="features-item__title features-item__title--text-white">Настоящий<br>городок</h3>
               <p class="features-item__item-number features-item__item-number--text-white">№1</p>
@@ -53,20 +53,20 @@
             </div>
             <ul class="city-attractions">
               <li class="city-attractions__item">
-                <h4 class="city-attractions__title">Жильё</h4>
+                <h4 class="city-attractions__title city-attractions__title--accommodation">Жильё</h4>
                 <p class="city-attractions__description">Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
               </li>
               <li class="city-attractions__item">
-                <h4 class="city-attractions__title">Еда</h4>
+                <h4 class="city-attractions__title city-attractions__title--food">Еда</h4>
                 <p class="city-attractions__description">Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
               </li>
               <li class="city-attractions__item">
-                <h4 class="city-attractions__title">Сувениры</h4>
+                <h4 class="city-attractions__title city-attractions__title--souvenirs">Сувениры</h4>
                 <p class="city-attractions__description">Не только китайского, но и местного<br> производства!</p>
               </li>
             </ul>
           </li>
-          <li class="features__item features-item item-image">
+          <li class="features__item features__item--image-left features-item item-image">
             <div class="features__wrapper features__wrapper--right">
               <h3 class="features-item__title features-item__title--text-white">Там есть<br> Мост дьявола</h3>
               <p class="features-item__item-number features-item__item-number--text-white">№2</p>
@@ -74,17 +74,17 @@
                 конечно<br> вы осмелитесь</p>
             </div>
           </li>
-          <li class="features__item features-item">
+          <li class="features__item features__item--without-image features-item">
             <h3 class="features-item__title">Небольшая<br> площадь</h3>
             <p class="features-item__item-number">№3</p>
             <p class="features-item__description">Все достопримечательности<br> находятся очень близко</p>
           </li>
-          <li class="features__item features-item">
+          <li class="features__item features__item--without-image features-item">
             <h3 class="features-item__title">Красивая<br> дорога</h3>
             <p class="features-item__item-number">№4</p>
             <p class="features-item__description">Ехать в Седону из Лас-Вегаса совсем<br> не скучно!</p>
           </li>
-          <li class="features__item features-item">
+          <li class="features__item features__item--without-image features-item">
             <h3 class="features-item__title">Мало<br> туристов</h3>
             <p class="features-item__item-number">№5</p>
             <p class="features-item__description">Большинство едет в гранд каньон<br> и толпится там</p>
@@ -105,9 +105,11 @@
         <div class="hotel-search__wrapper-form">
           <button class="hotel-search__button hotel-search__button-popup" type="button">Поиск гостиницы в Седоне</button>
           <form class="hotel-search__popup-form" action="https://echo.htmlacademy.ru" method="post">
-            <label class="hotel-search__field">
-              <span class="hotel-search__field-name hotel-search__field-name--arrival-date">Дата заезда:</span>
-              <input class="hotel-search__input hotel-search__input--date" type="text" name="arrival-date" value="" placeholder="24 апреля 2017">
+            <div class="hotel-search__wrapper-field">
+              <label class="hotel-search__field" for="arrival-date-field">
+                <span class="hotel-search__field-name ">Дата заезда:</span>
+              </label>
+              <input class="hotel-search__input hotel-search__input--date" type="text" name="arrival-date" value="" placeholder="24 апреля 2017" autocomplete="off" id="arrival-date-field">
               <button class="hotel-search__icon-date" type="button">
                 <span class="visually-hidden hotel-search__icon-date-text">
                   Выбор даты заезда
@@ -117,10 +119,12 @@
                   <path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
                 </svg>
               </button>
-            </label>
-            <label class="hotel-search__field">
-              <span class="hotel-search__field-name hotel-search__field-name--departure-date">Дата выезда:</span>
-              <input class="hotel-search__input hotel-search__input--date" type="text" name="departure-date" value="" placeholder="4 июля 2017">
+            </div>
+            <div class="hotel-search__wrapper-field">
+              <label class="hotel-search__field" for="departure-date-field">
+                <span class="hotel-search__field-name">Дата выезда:</span>
+              </label>
+              <input class="hotel-search__input hotel-search__input--date" type="text" name="departure-date" value="" placeholder="4 июля 2017" autocomplete="off" id="departure-date-field">
               <button class="hotel-search__icon-date" type="button">
                 <span class="visually-hidden hotel-search__icon-date-text">
                   Выбор даты выезда
@@ -130,36 +134,40 @@
                   <path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
                 </svg>
               </button>
-            </label>
-            <div class="hotel-search__wrapper-label">
-              <label class="hotel-search__field">
-                <span class="hotel-search__field-name hotel-search__field-name--adults">Взрослые:</span>
+            </div>
+            <div class="hotel-search__wrapper-field">
+              <div class="hotel-search__wrapper-people-number">
+                <label class="hotel-search__field" for="number-adults">
+                  <span class="hotel-search__field-name hotel-search__field-name--adults">Взрослые:</span>
+                </label>
                 <button class="hotel-search__icon-minus" type="button">
                   <span class="visually-hidden hotel-search__icon-minus-text">
                     Уменьшение количества взрослых
                   </span>
                 </button>
-                <input class="hotel-search__input hotel-search__input--people-number" type="text" name="adults" value="" placeholder="2">
+                <input class="hotel-search__input hotel-search__input--people-number" type="text" name="adults" value="" placeholder="2" id="number-adults">
                 <button class="hotel-search__icon-plus" type="button">
                   <span class="visually-hidden hotel-search__icon-plus-text">
                     Увеличение количества взрослых
                   </span>
                 </button>
-              </label>
-              <label class="hotel-search__field">
-                <span class="hotel-search__field-name hotel-search__field-name--children">Дети:</span>
+              </div>
+              <div class="hotel-search__wrapper-people-number">
+                <label class="hotel-search__field" for="number-children">
+                  <span class="hotel-search__field-name hotel-search__field-name--children">Дети:</span>
+                </label>
                 <button class="hotel-search__icon-minus" type="button">
                   <span class="visually-hidden hotel-search__icon-minus-text">
                     Уменьшение количества детей
                   </span>
                 </button>
-                <input class="hotel-search__input hotel-search__input--people-number" type="text" name="children" value="" placeholder="0">
+                <input class="hotel-search__input hotel-search__input--people-number" type="text" name="children" value="" placeholder="0" id="number-children">
                 <button class="hotel-search__icon-plus" type="button">
-                  <span span class="visually-hidden hotel-search__icon-plus-text">
+                  <span class="visually-hidden hotel-search__icon-plus-text">
                     Увеличение количества детей
                   </span>
                 </button>
-              </label>
+              </div>
             </div>
             <button class="hotel-search__button hotel-search__button-search" type="submit">Найти</button>
           </form>
@@ -209,8 +217,6 @@
         <p class="footer__developer-name">Website by</p>
         <span class="footer__logo">
           <a class="footer__developer-link" href="https://htmlacademy.ru/intensive/htmlcss">
-            <!-- <img class="footer__developer-image" src="img/logo-htmlacademy.svg" width="115" height="41"
-              alt="htmlacademy.ru"> -->
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="115" height="41" viewbox="0 0 108.08 36.85"><title>logo-htmlacademy-small1</title>
               <path d="M44.61,26.88a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,39.63,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1,0-2.16.33-2.16,1.38h0Zm12.36-6.11a5,5,0,0,1,2.57.64V22a4.08,4.08,0,0,0-2.3-.7,2.75,2.75,0,1,0,0,5.49,5,5,0,0,0,2.43-.64v1.71a6.27,6.27,0,0,1-2.76.57A4.21,4.21,0,0,1,46,24.51q0-.21,0-0.41a4.32,4.32,0,0,1,4.18-4.46h0.38Zm12.17,7.24a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,57.73,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1.06,0-2.16.33-2.16,1.38h0ZM73,16V28.2H71.35V26.88a3.88,3.88,0,0,1-3.19,1.54,4.4,4.4,0,0,1,0-8.78,3.81,3.81,0,0,1,3,1.3V16H73Zm-4.53,5.22a2.76,2.76,0,1,0,0,5.52A2.86,2.86,0,0,0,71.15,25V23A2.91,2.91,0,0,0,68.49,21.27ZM79,19.64c3.31,0,4.46,2.68,3.92,5.09H76.7c0.21,1.5,1.67,2.11,3.19,2.11a6.11,6.11,0,0,0,2.64-.59v1.6a7.14,7.14,0,0,1-3,.57C77,28.42,74.78,27,74.78,24a4.18,4.18,0,0,1,4-4.39H79Zm0.09,1.54a2.28,2.28,0,0,0-2.44,2.1v0.06H81.3A2,2,0,0,0,79.13,21.18Zm5.73,7V19.87h1.65v1a3.81,3.81,0,0,1,2.78-1.27A2.86,2.86,0,0,1,91.89,21a4.12,4.12,0,0,1,2.91-1.33A3.06,3.06,0,0,1,98,23V28.2h-1.9V23.05a1.59,1.59,0,0,0-1.42-1.75H94.42a2.8,2.8,0,0,0-2.07,1.12V28.2h-1.9V23.05A1.59,1.59,0,0,0,89,21.31H88.8a3,3,0,0,0-2.21,1.29v5.63H84.86Zm21.31-8.33h1.9l-3.91,9.46c-0.9,2.17-2.09,2.86-3.35,2.86a4.76,4.76,0,0,1-1.1-.14V30.46a2.86,2.86,0,0,0,.85.12c0.9,0,1.58-.64,2.07-1.9l0.17-.42-4-8.4h2l2.86,6.29ZM38.73,1.46V6.22a3.81,3.81,0,0,1,2.7-1.14,3.25,3.25,0,0,1,3.44,3.4v5.15H43V8.72a1.81,1.81,0,0,0-1.61-2h-0.3a2.93,2.93,0,0,0-2.32,1.39v5.52h-1.9V1.46h1.9ZM49.94,2.31v3h3V6.91h-3v3.81c0,1.1.5,1.46,1.58,1.46a4.49,4.49,0,0,0,1.69-.33v1.6A6.8,6.8,0,0,1,51,13.8a2.55,2.55,0,0,1-2.86-2.74V6.89H46.58V5.26h1.5V2.74Zm5.4,11.31V5.28H57v1A3.81,3.81,0,0,1,59.77,5a2.86,2.86,0,0,1,2.6,1.33A4.12,4.12,0,0,1,65.28,5,3.06,3.06,0,0,1,68.44,8.4v5.21h-1.9V8.46a1.59,1.59,0,0,0-1.42-1.75H64.89a2.8,2.8,0,0,0-2.07,1.12v5.78h-1.9V8.46A1.59,1.59,0,0,0,59.5,6.71H59.27A3,3,0,0,0,57.06,8v5.63H55.34ZM71.17,1.45H73V13.6H71.17V1.45ZM14.71,0H14.55L0,1.54V28.21l14.55,8.66,14.55-8.66V1.54Zm12.5,27.1L14.55,34.64,1.9,27.12V16.18l12.59,7.5V25L5.86,19.9v1.31l8.68,5.21v1.39L5.87,22.65V24l8.68,5.21,8.75-5.24V18.31L27.2,16V27.12Zm0-12.53-3.48,2-1.6,1L14.51,13v1.31L21,18.23H21l-0.14.09-1,.54-5.37-3.2V17l4.24,2.52-1,.67-3.2-1.9v1.31l2.1,1.24L14.5,22.1,2,14.65,14.51,7.11Zm0-1.32L14.49,5.76,1.91,13.25v-10L14.56,1.92,27.21,3.25v10h0Z" transform="translate(0 -0.02)" fill="#231f20"/>
             </svg>
